# detalon-channel

./: .gitignore  Dockerfile  LICENSE.md  docker-compose.yaml  pyproject.toml  questions.json
.github/workflows/: docker-image.yml
src/bot/: __main__.py  setup.py
src/bot/application/dto/: __init__.py  message.py
src/bot/application/ports/: __init__.py  delivery.py  questionnaire.py
src/bot/application/usecases/: __init__.py  send_question.py
src/bot/config/: __init__.py  settings.py
src/bot/domain/entity/: question.py
src/bot/infra/delivery/: __init__.py  mapper.py  telegram.py
src/bot/infra/questionnaire/: __init__.py  json_provider.py  mapper.py  models.py
src/bot/infra/scheduler/: __init__.py  asyncio.py
src/bot/shared/: debug.py  safe.py  time.py
